bin_PROGRAMS = rtnl_dump rtnl_linkaddr_get rtnl_defaultroute_get rtnl_addr_mod xfrm_dump xfrm_policy_mod

rtnl_dump_SOURCES = rtnl/rtnl_dump.c
rtnl_dump_CFLAGS = -static -I$(top_srcdir)/include
rtnl_dump_LDFLAGS = -static -L$(top_srcdir)/src/.libs -lmnlxt

rtnl_linkaddr_get_SOURCES = rtnl/rtnl_linkaddr_get.c
rtnl_linkaddr_get_CFLAGS = -static -I$(top_srcdir)/include
rtnl_linkaddr_get_LDFLAGS = -static -L$(top_srcdir)/src/.libs -lmnlxt

rtnl_defaultroute_get_SOURCES = rtnl/rtnl_defaultroute_get.c
rtnl_defaultroute_get_CFLAGS = -static -I$(top_srcdir)/include
rtnl_defaultroute_get_LDFLAGS = -static -L$(top_srcdir)/src/.libs -lmnlxt

rtnl_addr_mod_SOURCES = rtnl/rtnl_addr_mod.c
rtnl_addr_mod_CFLAGS = -static -I$(top_srcdir)/include
rtnl_addr_mod_LDFLAGS = -static -L$(top_srcdir)/src/.libs -lmnlxt

xfrm_dump_SOURCES = xfrm/xfrm_dump.c
xfrm_dump_CFLAGS = -static -I$(top_srcdir)/include
xfrm_dump_LDFLAGS = -static -L$(top_srcdir)/src/.libs -lmnlxt

xfrm_policy_mod_SOURCES = xfrm/xfrm_policy_mod.c
xfrm_policy_mod_CFLAGS = -static -I$(top_srcdir)/include
xfrm_policy_mod_LDFLAGS = -static -L$(top_srcdir)/src/.libs -lmnlxt
