
AM_CFLAGS = -I$(top_srcdir)/include
AM_LDFLAGS = $(top_builddir)/src/libmnlxt.la

rtnl_dump_SOURCES = rtnl_common.c rtnl_dump.c

rtnl_linkaddr_get_SOURCES = rtnl_linkaddr_get.c

rtnl_defaultroute_get_SOURCES = rtnl_defaultroute_get.c

rtnl_addr_mod_SOURCES = rtnl_addr_mod.c

rtnl_listen_SOURCES = rtnl_common.c rtnl_listen.c

bin_PROGRAMS = rtnl_dump rtnl_linkaddr_get rtnl_defaultroute_get rtnl_addr_mod rtnl_listen
